[package]
name = "xps-19-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
dotenvy = "0.15.7"
reqwest = "0.12.23"
serde_urlencoded = "0.7.1"
sha1 = "0.10.6"
tokio = { version = "1.47.1", features = ["full"] }
urlencoding = "2.1.3"
warp = { version = "0.4.1", features = ["server"] }
